[package]
name = "maven-mirror-cache"
version = "2.0.0"
edition = "2024"

[dependencies]
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum = "0.8.4"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
humantime-serde = "1.1.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.9.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = "0.15.11"
axum-server-timing = "3.0.0"
http-body-util = "0.1.3"
rustls = { version = "0.23.29", features = ["ring"] }
async-trait = "0.1.88"

[dev-dependencies]
tokio-test = "0.4.4"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres", "default"] }

[features]
default = ["test_containers"]
test_containers = []
